objects/SegmentByProduct__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>#MarketingTeam #Sprint14
Custom Setting para definir niveles de Segmento por Producto</description>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>Familia de Producto</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentLevel1__c</fullName>
        <label>Segmento Nivel 1</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentLevel2__c</fullName>
        <label>Segmento Nivel 2</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Segmento por Familia de Producto</label>
    <listViews>
        <fullName>vista_de_flor</fullName>
        <columns>NAME</columns>
        <columns>ProductFamily__c</columns>
        <columns>SegmentLevel1__c</columns>
        <columns>SegmentLevel2__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>vista de flor</label>
        <language>es</language>
    </listViews>
</CustomObject>